--- a/user/themes/bpho/scss/modular/_text.scss
+++ b/user/themes/bpho/scss/modular/_text.scss
@@ -4,7 +4,7 @@
     @extend .fw4;
     @extend .f3;
     @extend .mt0;
-    @extend .mb5;
+    @extend .mb4;
   }
 
 }
